--- a/train_audio/vss_table.ipynb
+++ b/train_audio/vss_table.ipynb
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| Name           |   Dimensionality Reduction |    PSNR |   SSDR |    SRDR |   CDPAM |\n",
-       "|:---------------|---------------------------:|--------:|-------:|--------:|--------:|\n",
-       "| Rate Reduction |                     4      | 31.9733 | 7.2344 |  0.6237 | 37.3354 |\n",
-       "| WalloC         |                     4.7407 | 33.7811 | 3.4055 | -2.5052 | 35.5056 |\n",
-       "| Rate Reduction |                    18      | 31.5943 | 5.4661 | -0.1821 | 36.6061 |\n",
-       "| WalloC         |                    18.963  | 33.8357 | 4.0861 | -2.4721 | 36.0921 |"
+       "| Name           |   Dimensionality Reduction |    PSNR |   SSDR |     SRDR |   CDPAM |\n",
+       "|:---------------|---------------------------:|--------:|-------:|---------:|--------:|\n",
+       "| Rate Reduction |                     4      | 31.9733 | 7.2344 |   0.6237 | 37.3354 |\n",
+       "| WalloC         |                     4.7407 | 34.2437 | 3.8444 | -15.7307 | 35.5056 |\n",
+       "| Rate Reduction |                    18      | 31.5943 | 5.4661 |  -0.1821 | 36.6061 |\n",
+       "| WalloC         |                    18.963  | 34.2317 | 4.2656 | -16.356  | 36.0921 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -106,7 +106,7 @@
     "    ds = load_dataset(method, split='validation')\n",
     "    row = [names[i_method], dimensionality_reduction[i_method]]\n",
     "    for metric in metrics[:-1]:\n",
-    "        mean = np.median(ds[metric])\n",
+    "        mean = np.mean(ds[metric])\n",
     "        row.append(mean)\n",
     "    CDPAM_dB = np.mean(-10*np.log10(ds['CDPAM']))\n",
     "    row.append(CDPAM_dB)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "2f066e91-060f-40db-87ba-369dc48183fe",
    "metadata": {},
    "outputs": [
@@ -134,9 +134,9 @@
       " & Name & Dimensionality Reduction & PSNR & SSDR & SRDR & CDPAM \\\\\n",
       "\\midrule\n",
       "\\textbf{0} & Rate Reduction & 4 & 32 & 7.23 & 0.624 & 37.3 \\\\\n",
-      "\\textbf{1} & WalloC & 4.74 & 33.8 & 3.41 & -2.51 & 35.5 \\\\\n",
+      "\\textbf{1} & WalloC & 4.74 & 34.2 & 3.84 & -15.7 & 35.5 \\\\\n",
       "\\textbf{2} & Rate Reduction & 18 & 31.6 & 5.47 & -0.182 & 36.6 \\\\\n",
-      "\\textbf{3} & WalloC & 19 & 33.8 & 4.09 & -2.47 & 36.1 \\\\\n",
+      "\\textbf{3} & WalloC & 19 & 34.2 & 4.27 & -16.4 & 36.1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
